package org.example;

public class Antelope extends Prey{
    public Antelope(int row, int col, char symbol) {
        super(row, col, symbol);
    }
}
