package org.example;

public class Hyena extends Hunter{
    public Hyena(int row, int col, char symbol) {
        super(row, col, symbol);
    }
}
