package org.example;

public class Lion extends Hunter{
    public Lion(int row, int col, char symbol) {
        super(row, col, symbol);
    }
}
