package org.example;

public class Zebra extends Prey{
    public Zebra(int row, int col, char symbol) {
        super(row, col, symbol);
    }
}
